--- a/src/main/resources/theme/play/ranked_1v1.fxml
+++ b/src/main/resources/theme/play/ranked_1v1.fxml
@@ -23,9 +23,9 @@
             xmlns="http://javafx.com/javafx/8.0.141"
             fx:controller="com.faforever.client.rankedmatch.Ladder1v1Controller">
   <content>
-    <VBox alignment="CENTER" minHeight="0.0" minWidth="0.0" spacing="5.0">
+    <VBox alignment="CENTER" minHeight="0.0" minWidth="0.0" spacing="10.0">
       <children>
-          <FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="10.0" minHeight="0.0" minWidth="0.0" styleClass="ranked1v1-flow-pane" vgap="10.0">
+          <FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="10.0" minHeight="0.0" minWidth="0.0" vgap="10.0">
           <children>
               <GridPane prefWidth="400.0" styleClass="card" vgap="10.0">
               <columnConstraints>
@@ -171,7 +171,12 @@
                 </GridPane>
               </children>
             </GridPane>
-              <GridPane styleClass="card">
+          </children>
+          <padding>
+              <Insets top="5.0" />
+          </padding>
+        </FlowPane>
+          <GridPane styleClass="card" maxWidth="898">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
               </columnConstraints>
@@ -179,24 +184,19 @@
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
               </rowConstraints>
               <children>
-                  <BarChart fx:id="ratingDistributionChart" categoryGap="5.0" prefHeight="300.0" prefWidth="866.0" title="%ranked1v1.rankingDistribution">
-                  <xAxis>
-                      <CategoryAxis fx:id="ratingDistributionXAxis" animated="false" label="%ranked1v1.rankingDistribution.x" side="BOTTOM" tickLabelGap="0.0" tickLabelRotation="-90.0" />
-                  </xAxis>
-                  <yAxis>
-                      <NumberAxis fx:id="ratingDistributionYAxis" label="%ranked1v1.rankingDistribution.y" side="LEFT" />
-                  </yAxis>
-                </BarChart>
+                  <BarChart fx:id="ratingDistributionChart" categoryGap="5.0" prefHeight="300.0" prefWidth="878.0" title="%ranked1v1.rankingDistribution">
+                      <xAxis>
+                          <CategoryAxis fx:id="ratingDistributionXAxis" animated="false" label="%ranked1v1.rankingDistribution.x" side="BOTTOM" tickLabelGap="0.0" tickLabelRotation="-90.0" />
+                      </xAxis>
+                      <yAxis>
+                          <NumberAxis fx:id="ratingDistributionYAxis" label="%ranked1v1.rankingDistribution.y" side="LEFT" />
+                      </yAxis>
+                  </BarChart>
               </children>
-                  <padding>
-                      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-                  </padding>
-            </GridPane>
-          </children>
-          <padding>
-              <Insets top="5.0" />
-          </padding>
-        </FlowPane>
+              <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+              </padding>
+          </GridPane>
           <JFXButton mnemonicParsing="false" onAction="#showLadderMaps" text="%ranked1v1.showMaps"/>
       </children>
       <padding>
