--- a/src/main/resources/theme/play/teammatchmaking/matchmaking_member_card.fxml
+++ b/src/main/resources/theme/play/teammatchmaking/matchmaking_member_card.fxml
@@ -9,16 +9,16 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import java.lang.String?>
-<HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="playerItemRoot" alignment="CENTER_LEFT" spacing="20" styleClass="card"
+<HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="playerItemRoot" alignment="CENTER_LEFT" spacing="10" styleClass="card"
       xmlns="http://javafx.com/javafx/11.0.1" onContextMenuRequested="#onContextMenuRequested"
       fx:controller="com.faforever.client.teammatchmaking.PartyMemberItemController">
 
     <children>
-        <ImageView fx:id="userImageView" fitHeight="64.0" fitWidth="64.0" pickOnBounds="true" preserveRatio="true"
+        <ImageView fx:id="userImageView" fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true"
                    AnchorPane.leftAnchor="0"/>
 
-        <VBox alignment="CENTER" spacing="10" minWidth="220" maxWidth="220">
-            <HBox spacing="10" alignment="CENTER">
+        <VBox alignment="CENTER_LEFT" spacing="10" minWidth="220" maxWidth="320">
+            <HBox spacing="10" alignment="CENTER_LEFT">
                 <!--                <ImageView fx:id="avatarImageView" fitHeight="20.0" fitWidth="40.0" pickOnBounds="true"-->
                 <!--                           preserveRatio="true"/> TODO-->
                 <ImageView fx:id="countryImageView" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true"
@@ -33,7 +33,7 @@
                 </HBox>
             </HBox>
 
-            <HBox spacing="20" alignment="CENTER">
+            <HBox spacing="20" alignment="CENTER_LEFT">
 
                 <Label fx:id="ratingLabel" text="%teammatchmaking.rating"/>
                 <Label fx:id="gameCountLabel" text="%teammatchmaking.gameCount"/>
@@ -44,7 +44,8 @@
             </padding>
         </VBox>
 
-        <HBox alignment="CENTER" spacing="5.0">
+        <!-- FACTION BUTTONS -->
+        <HBox alignment="BASELINE_CENTER" spacing="0.0">
             <children>
                 <ToggleButton fx:id="aeonButton" mnemonicParsing="false" onAction="#onFactionButtonClicked"
                               selected="true" text="">
@@ -78,17 +79,20 @@
                 <Label fx:id="refreshingLabel" styleClass="icon" text="" visible="false"/>
             </children>
             <padding>
-                <Insets left="30"/>
+                <Insets left="0"/>
             </padding>
         </HBox>
 
-        <HBox HBox.hgrow="ALWAYS" alignment="CENTER_RIGHT">
-            <JFXButton fx:id="kickPlayerButton" onAction="#onKickPlayerButtonClicked"
-                       text="%teammatchmaking.kickPlayer"/>
+        <HBox alignment="CENTER_RIGHT" HBox.hgrow="always">
+            <JFXButton fx:id="kickPlayerButton" onAction="#onKickPlayerButtonClicked" text="">
+                <styleClass>
+                    <String fx:value="icon-button"/>
+                </styleClass>
+            </JFXButton>
         </HBox>
     </children>
 
     <padding>
-        <Insets bottom="12.0" left="12.0" right="12.0" top="12.0"/>
+        <Insets bottom="0.0" left="15.0" right="0.0" top="0.0"/>
     </padding>
 </HBox>
