--- a/src/main/resources/theme/play/team_matchmaking.fxml
+++ b/src/main/resources/theme/play/team_matchmaking.fxml
@@ -46,8 +46,8 @@
                         </padding>
                     </VBox>
 
-                    <!-- BOTTOM LEFT card -->
-                    <VBox styleClass="card" minHeight="250">
+                    <!-- BOTTOM LEFT CARD -->
+                    <VBox styleClass="card" minHeight="250" maxHeight="250" VBox.vgrow="NEVER">
                         <children>
                             <Label styleClass="h2" text="%teammatchmaking.statistics"/>
 
@@ -66,13 +66,9 @@
                     <VBox maxHeight="300.0" minHeight="300.0" styleClass="card">
                         <children>
                             <Label styleClass="h2" text="%teammatchmaking.availableQueues"/>
-                            <HBox spacing="10.0">
-                                <children>
-                                    <JFXButton cancelButton="true" disable="true" text="%teammatchmaking.leaveQueue"
-                                               onAction="#onLeaveQueueButtonClicked"/>
-                                </children>
-                            </HBox>
-                            <JFXListView VBox.vgrow="ALWAYS"/>
+                            <JFXListView fx:id="queueListView" focusTraversable="false"
+                                         styleClass="matchmaking-queue-list-view"
+                                         VBox.vgrow="ALWAYS"/>
                         </children>
                         <padding>
                             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
