--- a/src/main/resources/theme/play/team_matchmaking.fxml
+++ b/src/main/resources/theme/play/team_matchmaking.fxml
@@ -63,7 +63,7 @@
                       HBox.hgrow="ALWAYS">
 
                     <!-- QUEUE CARD -->
-                    <VBox maxHeight="300.0" minHeight="300.0" styleClass="card">
+                    <VBox minHeight="300.0" styleClass="card" VBox.vgrow="ALWAYS"> <!-- maxHeight="300.0"-->
                         <children>
                             <Label styleClass="h2" text="%teammatchmaking.availableQueues"/>
                             <JFXListView fx:id="queueListView" focusTraversable="false"
@@ -76,14 +76,14 @@
                     </VBox>
 
                     <!-- BOTTOM RIGHT CARD -->
-                    <VBox maxHeight="1.7976931348623157E308" styleClass="card" VBox.vgrow="ALWAYS">
+                    <!--<VBox maxHeight="1.7976931348623157E308" styleClass="card" VBox.vgrow="ALWAYS">
                         <children>
                             <Label styleClass="h2" text="%teammatchmaking.chat"/>
                         </children>
                         <padding>
                             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                         </padding>
-                    </VBox>
+                    </VBox>-->
                 </VBox>
             </children>
             <padding>
