--- a/src/main/resources/theme/play/teammatchmaking/matchmaking_member_card.fxml
+++ b/src/main/resources/theme/play/teammatchmaking/matchmaking_member_card.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import java.lang.String?>
@@ -14,13 +13,15 @@
       fx:controller="com.faforever.client.teammatchmaking.PartyMemberItemController">
 
     <children>
-        <ImageView fx:id="userImageView" fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true"
-                   AnchorPane.leftAnchor="0"/>
+        <!--        <ImageView fx:id="userImageView" fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true"-->
+        <!--                   AnchorPane.leftAnchor="0"/>-->
+        <ImageView fx:id="leagueImageView" fitHeight="20.0" fitWidth="40.0" pickOnBounds="true"
+                   preserveRatio="true"/>
+        <!--        <ImageView fx:id="avatarImageView" fitHeight="20.0" fitWidth="40.0" pickOnBounds="true"-->
+        <!--                   preserveRatio="true"/>-->
 
         <VBox alignment="CENTER_LEFT" spacing="10" minWidth="220" maxWidth="320">
             <HBox spacing="10" alignment="CENTER_LEFT">
-                <!--                <ImageView fx:id="avatarImageView" fitHeight="20.0" fitWidth="40.0" pickOnBounds="true"-->
-                <!--                           preserveRatio="true"/> TODO-->
                 <ImageView fx:id="countryImageView" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true"
                            preserveRatio="true"/>
                 <HBox spacing="5">
