--- a/src/main/resources/theme/leaderboard/leaderboard.fxml
+++ b/src/main/resources/theme/leaderboard/leaderboard.fxml
@@ -4,44 +4,42 @@
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Pagination?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="leaderboardRoot" alignment="CENTER" maxHeight="1.7976931348623157E308"
-      maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" xmlns="http://javafx.com/javafx/8.0.60"
-      fx:controller="com.faforever.client.leaderboard.LeaderboardController">
+
+<VBox fx:id="leaderboardRoot" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.leaderboard.LeaderboardController">
   <children>
     <VBox fx:id="contentPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="ALWAYS">
       <children>
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <Label contentDisplay="RIGHT" graphicTextGap="10.0" maxWidth="1.7976931348623157E308" styleClass="icon" text="" />
-                   <JFXTextField fx:id="searchTextField" maxWidth="1.7976931348623157E308"
-                                 promptText="%ladder.searchPrompt" HBox.hgrow="ALWAYS"/>
+                   <JFXTextField fx:id="searchTextField" maxWidth="1.7976931348623157E308" promptText="%ladder.searchPrompt" HBox.hgrow="ALWAYS" />
                </children>
             </HBox>
-        <TableView fx:id="ratingTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                   minHeight="0.0" minWidth="0.0" VBox.vgrow="ALWAYS" styleClass="big-scroll-bar">
+        <TableView fx:id="ratingTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" styleClass="big-scroll-bar" VBox.vgrow="ALWAYS">
           <columns>
-            <TableColumn fx:id="rankColumn" text="Rank"/>
-            <TableColumn fx:id="nameColumn" text="Name"/>
-            <TableColumn fx:id="winLossColumn" text="Win/Loss Ratio" visible="false"/>
-            <TableColumn fx:id="gamesPlayedColumn" text="Games Played"/>
-            <TableColumn fx:id="ratingColumn" text="Rating"/>
+            <TableColumn fx:id="rankColumn" text="Rank" />
+            <TableColumn fx:id="nameColumn" text="Name" />
+            <TableColumn fx:id="winLossColumn" text="Win/Loss Ratio" visible="false" />
+            <TableColumn fx:id="gamesPlayedColumn" text="Games Played" />
+            <TableColumn fx:id="ratingColumn" text="Rating" />
           </columns>
           <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
           </columnResizePolicy>
         </TableView>
       </children>
         <padding>
-            <Insets top="10.0"/>
+            <Insets top="10.0" />
         </padding>
     </VBox>
     <VBox fx:id="connectionProgressPane" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="ALWAYS">
       <children>
-        <JFXSpinner prefHeight="80.0" prefWidth="80.0"/>
+        <JFXSpinner prefHeight="80.0" prefWidth="80.0" />
         <Label text="%leaderboard.loading">
           <VBox.margin>
             <Insets />
@@ -49,5 +47,6 @@
         </Label>
       </children>
     </VBox>
+      <Pagination maxPageIndicatorCount="3" prefHeight="88.0" prefWidth="322.0" />
   </children>
 </VBox>
