Added Checkbox for showing only replays from last year - missing implementation to actually filter and missing translation to most languages

--- a/src/main/resources/theme/vault/search/search.fxml
+++ b/src/main/resources/theme/vault/search/search.fxml
@@ -52,6 +52,7 @@
                     </graphic>
                 </JFXButton>
                 <JFXCheckBox fx:id="displayQueryCheckBox" mnemonicParsing="false" text="%vault.replays.displayQuery"/>
+                <JFXCheckBox fx:id="onlyShowLastYearCheckBox" mnemonicParsing="false" text="%vault.replays.onlyShowLastYear"/>
 
             </children>
         </HBox>
