--- a/src/main/resources/theme/play/create_game.fxml
+++ b/src/main/resources/theme/play/create_game.fxml
@@ -9,12 +9,9 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.layout.*?>
 <GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="createGameRoot" hgap="10.0" styleClass="create-game-root" vgap="10.0" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="com.faforever.client.game.CreateGameController">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="256.0" />
@@ -113,35 +110,47 @@
                         <Label styleClass="icon" text="" />
                     </graphic>
                 </Label>
-                <Label fx:id="versionLabel" text="&lt;Version&gt;" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                <Separator GridPane.columnSpan="2147483647" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" />
+                <Label fx:id="versionLabel" text="&lt;Version&gt;" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
+                <Separator GridPane.columnSpan="2147483647" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2"/>
                 <ScrollPane fitToWidth="true" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
                     <content>
-                        <Label fx:id="mapDescriptionLabel" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="&lt;Description&gt;" wrapText="true" />
+                        <Label fx:id="mapDescriptionLabel" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308"
+                               maxWidth="1.7976931348623157E308" text="&lt;Description&gt;" wrapText="true"/>
                     </content>
                 </ScrollPane>
             </children>
         </GridPane>
-        
-        <!-- text="%game.create.generatedMap" -->
-        <JFXButton fx:id="generateMapButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onGenerateMapButtonClicked" 
-        		styleClass="game-generate-map" text="%game.create.generatedMap" contentDisplay="RIGHT"
-        		GridPane.columnIndex="3" GridPane.rowIndex="7" GridPane.columnSpan="2">
-        	<graphic>
-        		<Label styleClass="button-mini-label" text="%game.create.generatedMapNew">
-        			<Insets left="250"/>
-        		</Label>
-        	</graphic>
-       	</JFXButton>
-        
+
+        <HBox GridPane.columnIndex="3" GridPane.rowIndex="7" GridPane.columnSpan="2" alignment="CENTER">
+            <!-- text="%game.create.generatedMap" -->
+            <JFXButton fx:id="generateMapButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
+                       onAction="#onGenerateMapButtonClicked"
+                       styleClass="game-generate-map" text="%game.create.generatedMap" contentDisplay="RIGHT"
+                       HBox.hgrow="ALWAYS">
+                <graphic>
+                    <Label styleClass="button-mini-label" text="%game.create.generatedMapNew">
+                        <Insets left="250"/>
+                    </Label>
+                </graphic>
+            </JFXButton>
+            <Spinner fx:id="spawnCountSpinner" style="-fx-pref-width: 5em" maxHeight="Infinity">
+                <tooltip>
+                    <Tooltip text="%game.create.spawnCount"/>
+                </tooltip>
+            </Spinner>
+        </HBox>
+
+
         <!-- Cancel, Ok -->
         <JFXButton mnemonicParsing="false" onAction="#onCloseButtonClicked" text="%cancel"
-        		 styleClass="more-button-padding"
-        		 GridPane.halignment="LEFT" GridPane.columnIndex="0" GridPane.rowIndex="8">
-        	<GridPane.margin><Insets top="15"/></GridPane.margin>
-        	<padding>
-				<Insets left="100.0" right="100.0" />
-			</padding>
+                   styleClass="more-button-padding"
+                   GridPane.halignment="LEFT" GridPane.columnIndex="0" GridPane.rowIndex="8">
+            <GridPane.margin>
+                <Insets top="15"/>
+            </GridPane.margin>
+            <padding>
+                <Insets left="100.0" right="100.0"/>
+            </padding>
         </JFXButton>
         <JFXButton fx:id="createGameButton" defaultButton="true" minWidth="-Infinity" mnemonicParsing="false" onAction="#onCreateButtonClicked" text="%game.create.create"
         		 styleClass="more-button-padding"
